k8s-do/registry-demo/registry-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: registry-demo
