k8s-do/registry-demo/registry-demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - datasetregister.netwerkdigitaalerfgoed.nl
      secretName: registry-demo
  rules:
    - host: datasetregister.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-demo
                port:
                  number: 80
